--- a/home.html
+++ b/home.html
@@ -4,8 +4,7 @@
         <h2>Featured Products</h2>
         <div class="center-featured">
             <div class="slideshow-container">
-                <!-- Slides for each featured product -->
-                <!-- (No changes in the slides) -->
+            <!--For slideshow to be implemented later -->
             </div>
         </div>
     </section>
