--- a/index.html
+++ b/index.html
@@ -44,6 +44,13 @@
         <footer>
             <p>&copy; 2023 K-Shop. All rights reserved.</p>
         </footer>
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
+        <script type="text/javascript">
+            (function () {
+                emailjs.init('RvBl8MmqRGKx1RdcR'); // Replace 'YOUR_PUBLIC_API_KEY' with your actual public API key
+            })();
+
+        </script>
 
         <script src="script.js"></script>
         <script src="products.js"></script>
