--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
                 <ul>
                     <li><a href="#" data-page="home">Home</a></li>
                     <li><a href="#" id="cart-link" data-page="cart">Cart</a></li>
+                    <button id="menu-toggle" class="menu-toggle">&#9776;</button>
                 </ul>
             </nav>
         </header>
