--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
         <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/emailjs-com@2.6.4/dist/email.min.js"></script>
         <script type="text/javascript">
             (function () {
-                emailjs.init('RvBl8MmqRGKx1RdcR'); // Replace 'YOUR_PUBLIC_API_KEY' with your actual public API key
+                emailjs.init('RvBl8MmqRGKx1RdcR');
             })();
 
         </script>
